--- a/web/index.html
+++ b/web/index.html
@@ -1,56 +1,60 @@
 <html>
 
-  <head>
-    <title>BarbieChad</title>
-    	<link rel="stylesheet" type="text/css" href="styles.css">
-      <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
-      <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
-      <script type="text/javascript" src='script.js'></script>
-  </head>
+	<head>
+		<title>BarbieChad</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
+		<link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
+		<script type="text/javascript" src="jquery-1.11.1.min.js"></script>
+		<script type="text/javascript" src='script.js'></script>
+		<script type="text/javascript" src='graph.js'></script>
+		<!-- import script for interactive graph -->
+		<script src="https://code.highcharts.com/highcharts.js"></script>
+		<script src="https://code.highcharts.com/modules/exporting.js"></script>
+	</head>
 
-  <body>
+	<body>
 
-    <div class="container top-buffer">
+		<div class="container top-buffer">
 
-      <h1> BarbieChad </h1>
+			<h1> BarbieChad </h1>
 
-      <div class="col-md-3">
+			<div class="col-md-3">
 
-        <div class="row top-buffer">
-          <h3> Settings </h3>
-        </div>
+				<div class="row top-buffer">
+					<h3> Settings </h3>
+				</div>
 
-        <div class="row top-buffer">
-          Sugar
-        </div>
+				<div class="row top-buffer">
+					Sugar
+				</div>
 
-      </div>
+			</div>
 
-      <div class="col-md-6">
+			<div class="col-md-6">
 
-        <div class="row top-buffer">
-          <h3> Graph </h3>
-        </div>
+				<div class="row top-buffer">
+					<h3> Graph </h3>
+				</div>
 
-        <div class="row top-buffer">
-          Spice
-        </div>
+				<div class="row top-buffer">
+					<div id="graph" style="min-width: 310px; height: 400px; max-width: 700px; margin: 0 auto"></div>
+				</div>
 
-      </div>
+			</div>
 
-      <div class="col-md-3">
+			<div class="col-md-3">
 
-        <div class="row top-buffer">
-          <h3> Results </h3>
-        </div>
+				<div class="row top-buffer">
+					<h3> Results </h3>
+				</div>
 
-        <div class="row top-buffer">
-          Everything Nice
-        </div>
+				<div class="row top-buffer">
+					Everything Nice
+				</div>
 
-      </div>
+			</div>
 
-    </div>
+		</div>
 
-  </body>
+	</body>
 </html>
