--- a/web/index.html
+++ b/web/index.html
@@ -45,37 +45,35 @@
         </div>
 
         <div class="row top-buffer">
-          <iframe src="https://embed.spotify.com/?uri=spotify:track:4th1RQAelzqgY7wL53UGQt" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
-
+<!--           <iframe src="https://embed.spotify.com/?uri=spotify:track:4th1RQAelzqgY7wL53UGQt" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
+ -->
+          <div id="player" style="padding-right: 0px;">
+          </div>
           <table id="playlist_results" class="table table-hover">
             <thead>
               <tr>
                   <th data-field="track">Track</th>
                   <th data-field="artist">Artist</th>
-                  <th data-field="album">Album</th>                                        
-              </tr>
+<!--                   <th data-field="album">Album</th>                                        
+ -->              </tr>
               </thead>
             <tbody>
               <!-- test -->
               <tr data-href="someshit"><td> 
                   Yummy</td><td>
-                  Tummy</td><td> 
-                  Album</td>
+                  TummyNOMNOMNOM</td>
               </tr>
               <tr data-href="someshit"><td> 
                   Yummy</td><td>
-                  Tummy</td><td> 
-                  Album</td>
+                  Tummy</td>
               </tr
               <tr data-href="someshit"><td> 
                   Yummy</td><td>
-                  Tummy</td><td> 
-                  Album</td>
+                  Tummy</td>
               </tr>
               <tr data-href="someshit"><td> 
                   Yummy</td><td>
-                  Tummy</td><td> 
-                  AlbumNOMNOM</td>
+                  Tummy</td>
               </tr>
             </tbody>
           </table>
