--- a/web/index.html
+++ b/web/index.html
@@ -6,10 +6,11 @@
 		<link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
 		<script type="text/javascript" src="jquery-1.11.1.min.js"></script>
 		<script type="text/javascript" src='script.js'></script>
-		<script type="text/javascript" src='graph.js'></script>
 		<!-- import script for interactive graph -->
 		<script src="https://code.highcharts.com/highcharts.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
+		<script src="http://highcharts.github.io/export-csv/export-csv.js"></script>
+		<script type="text/javascript" src='graph.js'></script>
 	</head>
 
 	<body>
