--- a/web/index.html
+++ b/web/index.html
@@ -69,45 +69,24 @@
             </div>
         </div>
         <div class="col-md-3">
-            <div class="row top-buffer">
-                <h3> Results </h3>
-            </div>
-
-        <div class="row top-buffer">
-<!--           <iframe src="https://embed.spotify.com/?uri=spotify:track:4th1RQAelzqgY7wL53UGQt" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
- -->
-          <div id="player" style="padding-right: 0px;">
+          <div class="row top-buffer">
+              <h3> Results </h3>
           </div>
-          <table id="playlist_results" class="table table-hover">
-            <thead>
-              <tr>
-                  <th data-field="track">Track</th>
-                  <th data-field="artist">Artist</th>
-<!--                   <th data-field="album">Album</th>                                        
- -->              </tr>
-              </thead>
-            <tbody>
-              <!-- test -->
-              <tr data-href="someshit"><td> 
-                  Yummy</td><td>
-                  TummyNOMNOMNOM</td>
-              </tr>
-              <tr data-href="someshit"><td> 
-                  Yummy</td><td>
-                  Tummy</td>
-              </tr
-              <tr data-href="someshit"><td> 
-                  Yummy</td><td>
-                  Tummy</td>
-              </tr>
-              <tr data-href="someshit"><td> 
-                  Yummy</td><td>
-                  Tummy</td>
-              </tr>
-            </tbody>
-          </table>
-
+          <div class="testtable row top-buffer">
+            <div id="player" style="padding-right: 0px;">
             </div>
+            <table id="playlist_results" class="table table-hover">
+              <thead>
+                <tr>
+                    <th data-field="track">Track</th>
+                    <th data-field="artist">Artist</th>                                        
+                </tr>
+                </thead>
+              <tbody>
+              </tbody>
+            </table>
+
+          </div>
         </div>
     </div>
     </div>
