--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,11 @@
     <title>BarbieChad</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap-select.min.css" rel="stylesheet">
     <script type="text/javascript" src="jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src='script.js'></script>
+    <script type="text/javascript" src='bootstrap-3.3.5-dist/js/bootstrap.min.js'></script>
+    <script type="text/javascript" src='bootstrap-select.min.js'></script>
     <!-- import script for interactive graph -->
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
