removed y axis labels; added form info to graph

--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
             <div class="row top-buffer">
                 <h3> Settings </h3>
                 <div>
-                    <form>
+                    <form id='searchform'>
                         <fieldset class="form-group">
                             <label for="metricSelect">Metric</label>
                             <select class="selectpicker" id="metricSelect">
@@ -57,7 +57,7 @@
                             <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Minutes">
                             <small class="text-muted"></small>
                         </fieldset>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="button" id="submit" class="btn btn-primary">Submit</button>
                         <a data-toggle="modal" href="#HelpModal" class="btn btn-info">Help</a>
                     </form>
                 </div>
