commented out duration box; make graph fixed size

--- a/web/index.html
+++ b/web/index.html
@@ -52,11 +52,11 @@
                                 <option value="techno">Techno</option>
                             </select>
                         </fieldset>
-                        <fieldset class="form-group">
-                            <label for="exampleInputEmail1">Duration</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Minutes">
-                            <small class="text-muted"></small>
-                        </fieldset>
+                        <!--<fieldset class="form-group">-->
+                            <!--<label for="exampleInputEmail1">Duration</label>-->
+                            <!--<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Minutes">-->
+                            <!--<small class="text-muted"></small>-->
+                        <!--</fieldset>-->
                         <button type="button" id="submit" class="btn btn-primary">Submit</button>
                         <a data-toggle="modal" href="#HelpModal" class="btn btn-info">Help</a>
                     </form>
