Fixed css to match Spotify theme

--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src='graph.js'></script>
 </head>
 
-<body>
+<body class='spotifyblack_background white_text'>
     <div class="container top-buffer">
         <h1> BarbieChad </h1>
         <div class="col-md-3">
