--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
     <div class="container top-buffer">
         <h1> BarbieChad </h1>
         <div class="col-md-3">
-            <div class="row top-buffer">
+            <div class="row top-buffer shadow">
                 <h3> Settings </h3>
                 <div>
                     <form id='searchform'>
@@ -64,18 +64,14 @@
             </div>
         </div>
         <div class="col-md-6">
-            <div class="row top-buffer">
+            <div class="row top-buffer shadow">
                 <h3> Graph </h3>
-            </div>
-            <div class="row top-buffer">
                 <div id="graph" style="min-width: 310px; height: 400px; max-width: 700px; margin: 0 auto"></div>
             </div>
         </div>
         <div class="col-md-3">
-          <div class="row top-buffer">
-              <h3> Results </h3>
-          </div>
-          <div class="testtable row top-buffer">
+          <div class="testtable row top-buffer shadow">
+            <h3> Results </h3>
             <div id="player" style="padding-right: 0px;">
             </div>
             <table id="playlist_results" class="table table-hover">
