--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <title>BarbieChad</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -17,7 +18,15 @@
 
 <body class='spotifyblack_background white_text'>
     <div class="container top-buffer">
-        <h1> BarbieChad </h1>
+        <div class="row">
+<!--             <div class="col-md-2">
+                <h1><span class="label label-default">Barbie</span><h1></div> -->
+        <div class="col-md-2" id = "square"></div>
+        <div class="col-md-2" id = "circle"></div>
+        <div class="col-md-2" id = "triangle-up"></div>
+        <div class="col-md-2"><h1><span class="label label-default">BarbieChad</span><h1></div>
+    </div>
+         
         <div class="col-md-3">
             <div class="row top-buffer shadow">
                 <h3> Settings </h3>
