--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,7 @@
         <div class="col-md-2" id = "triangle-up"></div>
         <div class="col-md-2"><h1><span class="label label-default">BarbieChad</span><h1></div>
     </div>
+    <div class="alert alert-danger" id ="errorMsg" role="alert" style="display:none"> </div>
          
         <div class="col-md-3">
             <div class="row top-buffer shadow">
@@ -36,7 +37,6 @@
                             <label for="metricSelect">Metric</label>
                             <select class="selectpicker" id="metricSelect">
                                 <option value="tempo">Tempo</option>
-                                <option value="pitch">Pitch</option>
                                 <option value="loudness">Loudness</option>
                                 <option value="energy">Energy</option>
                                 <option value="danceability">Danceability</option>
