--- a/web/index.html
+++ b/web/index.html
@@ -83,6 +83,10 @@
             <h3> Results </h3>
             <div id="player" style="padding-right: 0px;">
             </div>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                </div>
+            </div>
             <div style="overflow:scroll;height:70%;width:100%;overflow:auto;overflow-x:hidden">
               <table id="playlist_results" class="table table-hover">
                 <thead>
@@ -92,9 +96,11 @@
                   </tr>
                   </thead>
                 <tbody>
+
                 </tbody>
               </table>
             </div>
+            
           </div>
         </div>
     </div>
