changed backend to search based on artists

--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
         <div class="col-md-2"><h1><span class="label label-default">BarbieChad</span><h1></div>
     </div>
     <div class="alert alert-danger" id ="errorMsg" role="alert" style="display:none"> </div>
-         
+
         <div class="col-md-3">
             <div class="row top-buffer shadow">
                 <h3> Settings </h3>
@@ -61,11 +61,10 @@
                                 <option value="techno">Techno</option>
                             </select>
                         </fieldset>
-                        <!--<fieldset class="form-group">-->
-                            <!--<label for="exampleInputEmail1">Duration</label>-->
-                            <!--<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Minutes">-->
-                            <!--<small class="text-muted"></small>-->
-                        <!--</fieldset>-->
+                        <fieldset class="form-group">
+                            <label for="artist">Artist</label>
+                            <input type="search" class="form-control" id="artistSelect" placeholder="Kanye">
+                        </fieldset>
                         <button type="button" id="submit" class="btn btn-primary">Submit</button>
                         <a data-toggle="modal" href="#HelpModal" class="btn btn-info">Help</a>
                     </form>
@@ -100,7 +99,7 @@
                 </tbody>
               </table>
             </div>
-            
+
           </div>
         </div>
     </div>
