added header image

--- a/web/index.html
+++ b/web/index.html
@@ -19,16 +19,22 @@
 <body class='spotifyblack_background white_text'>
     <div class="container top-buffer">
         <div class="row">
-<!--             <div class="col-md-2">
-                <h1><span class="label label-default">Barbie</span><h1></div> -->
+        <div class="col-md-12 text-center">
+            <img src="img/header.png" class="img-responsive center">
+        </div>
+       </div>
+<!--         <div class="row">
+            <div id="header"><img class="center" src="img/header.png" /></div>
+            <div class="col-md-2">
+                <h1><span class="label label-default">Barbie</span><h1></div>
         <div class="col-md-2" id = "square"></div>
         <div class="col-md-2" id = "circle"></div>
         <div class="col-md-2" id = "triangle-up"></div>
         <div class="col-md-2"><h1><span class="label label-default">BarbieChad</span><h1></div>
-    </div>
+        </div> -->
     <div class="alert alert-danger" id ="errorMsg" role="alert" style="display:none"> </div>
 
-        <div class="col-md-3">
+        <div class="col-md-3" id = "setting">
             <div class="row top-buffer shadow">
                 <h3> Settings </h3>
                 <div>
@@ -71,7 +77,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" id="graph">
             <div class="row top-buffer shadow">
                 <h3> Graph </h3>
                 <div id="graph" style="min-width: 310px; height: 400px; max-width: 700px; margin: 0 auto"></div>
