Tables are back with metrics

--- a/web/index.html
+++ b/web/index.html
@@ -96,8 +96,9 @@
               <table id="playlist_results" class="table table-hover">
                 <thead>
                   <tr>
-                      <th data-field="track">Track</th>
-                      <th data-field="artist">Artist</th>
+                        <th data-field="track">Track</th>
+                        <th data-field="artist">Artist</th>
+                        <th id="metric" data-field="metric"></th>
                   </tr>
                   </thead>
                 <tbody>
