Moved "gen playlist" button; tempo is default metric

--- a/web/index.html
+++ b/web/index.html
@@ -77,12 +77,13 @@
                         <fieldset class="form-group">
                             <label for="metricSelect">Metric</label>
                             <select class="selectpicker" id="metricSelect" onchange="metricChange()">
-                                <option value="tempo">Tempo</option>
+                                <option value="tempo" selected>Tempo</option>
                                 <option value="loudness">Loudness</option>
                                 <option value="energy">Energy</option>
                                 <option value="danceability">Danceability</option>
                             </select>
                         </fieldset>
+                        <button type="button" style="float: right" id="graphsubmit" class="btn btn-primary">Generate Playlist</button>
 										</form>
             </div>
         </div>
