--- a/web/index.html
+++ b/web/index.html
@@ -40,38 +40,20 @@
                 <h3> Settings </h3>
                 <div>
                     <form id='searchform'>
-                        <!--<fieldset class="form-group">-->
-                            <!--<label for="genreSelect">Genre</label>-->
-                            <!--<select class="selectpicker" multiple title='Choose following...' id="genreSelect" data-live-search="true">-->
-                                <!--<option value="alternative">Alternative</option>-->
-                                <!--<option value="blues">Blues</option>-->
-                                <!--<option value="classical">Classical</option>-->
-                                <!--<option value="country">Country</option>-->
-                                <!--<option value="dance">Dance</option>-->
-                                <!--<option value="disco">Disco</option>-->
-                                <!--<option value="electronic">Electronic</option>-->
-                                <!--<option value="hip hop">Hip Hop</option>-->
-                                <!--<option value="pop">Pop</option>-->
-                                <!--<option value="jazz">Jazz</option>-->
-                                <!--<option value="rap">Rap</option>-->
-                                <!--<option value="rock">Rock</option>-->
-                                <!--<option value="r&b">R&B</option>-->
-                                <!--<option value="techno">Techno</option>-->
-                            <!--</select>-->
-                        <!--</fieldset>-->
-                        <fieldset class="form-group">
+<!--                         <fieldset class="form-group">
                             <label for="artist">Artist</label>
                             <input type="search" class="form-control" id="artistSelect" placeholder="Kanye">
+                        </fieldset> -->
+                        <fieldset class="form-group">
+                            <label for="artist">Artist</label>
+                            <div class="input-group input-group-lg">
+                               <span class="input-group-addon">
+                                  <i class="fa fa-download"></i>
+                               </span>
+                               <span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span>
+                               <input class="form-control input-lg" id="artistSelect" name="album[query]" placeholder="Search" type="text" autocomplete="off">
+                             </div>
                         </fieldset>
-
-<div class="input-group input-group-lg">
-   <span class="input-group-addon">
-      <i class="fa fa-download"></i>
-   </span>
-   <span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span>
-   <input class="form-control input-lg" id="spotify-album-search" name="album[query]" placeholder="Search" type="text" autocomplete="off">
- </div>
-                        
                         <button type="button" id="searchsubmit" class="btn btn-primary">Submit</button>
                         <a data-toggle="modal" href="#HelpModal" class="btn btn-info">Help</a>
                     </form>
