Toggle display on submit clicks

--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
         </div> -->
     <div class="alert alert-danger" id ="errorMsg" role="alert" style="display:none"> </div>
 
-        <div class="col-md-12" id = "setting">
+        <div class="col-md-12" id="artistScreen">
             <div class="row top-buffer shadow">
                 <h3> Settings </h3>
                 <div>
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-12" id="metricScreen" style="display:none">
             <div class="row top-buffer shadow">
                 <h3> Graph </h3>
                 <div id="graph" style="min-width: 310px; height: 400px; max-width: 700px; margin: 0 auto"></div>
@@ -79,7 +79,7 @@
 										</form>
             </div>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-12" id="musicScreen" style="display:none">
           <div class="testtable row top-buffer shadow">
             <h3> Results </h3>
             <div id="player" style="padding-right: 0px;">
