--- a/web/index.html
+++ b/web/index.html
@@ -21,28 +21,15 @@
     <div class="container top-buffer">
         <div class="row">
         <div class="col-md-12 text-center">
-            <img src="img/header.png" class="img-responsive center">
+            <img src="img/header3.png" class="img-responsive center">
         </div>
        </div>
-<!--         <div class="row">
-            <div id="header"><img class="center" src="img/header.png" /></div>
-            <div class="col-md-2">
-                <h1><span class="label label-default">Barbie</span><h1></div>
-        <div class="col-md-2" id = "square"></div>
-        <div class="col-md-2" id = "circle"></div>
-        <div class="col-md-2" id = "triangle-up"></div>
-        <div class="col-md-2"><h1><span class="label label-default">BarbieChad</span><h1></div>
-        </div> -->
     <div class="alert alert-danger" id ="errorMsg" role="alert" style="display:none"> </div>
         <div class="container" id ="setting-page">
             <div class="row top-buffer shadow">
                 <h3> Settings </h3>
                 <div>
                     <form id='searchform'>
-<!--                         <fieldset class="form-group">
-                            <label for="artist">Artist</label>
-                            <input type="search" class="form-control" id="artistSelect" placeholder="Kanye">
-                        </fieldset> -->
                         <fieldset class="form-group">
                             <label for="artist">Artist</label>
                             <div class="input-group input-group-lg">
@@ -115,10 +102,17 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 id="modal-label">Header</h4>
+                    <h4 id="modal-label">Instruction</h4>
                 </div>
                 <div class="modal-body">
-                    <p>Content.</p>
+                    <p>Enter list of artists you want to add</p>
+                    <p>Click on "Submit" button</p>
+                    <p>When the graph is showing, choose your metric</p>
+                    <p>Click on the graph to make your own curve. You could click on a point to redo it</p>
+                    <p>Click on "Generate Playlist" button</p>
+                    <p></p>
+
+                    the player automatically (re)sets itself to the first result of the playlist so that the user has another indication that the playlist (re)creation has happened.
                 </div>
             </div>
             <!--modal-content-->
