--- a/web/index.html
+++ b/web/index.html
@@ -102,17 +102,15 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 id="modal-label">Instruction</h4>
+                    <h4 id="modal-label">Welcome to BarbieChad!</h4>
                 </div>
                 <div class="modal-body">
-                    <p>Enter list of artists you want to add</p>
-                    <p>Click on "Submit" button</p>
-                    <p>When the graph is showing, choose your metric</p>
-                    <p>Click on the graph to make your own curve. You could click on a point to redo it</p>
-                    <p>Click on "Generate Playlist" button</p>
-                    <p></p>
-
-                    the player automatically (re)sets itself to the first result of the playlist so that the user has another indication that the playlist (re)creation has happened.
+                    <li>Enter list of artists you want to add</li>
+                    <li>Click on "Submit" button</li>
+                    <li>When the graph is showing, choose your metric</li>
+                    <li>Click on the graph to make your own curve. You could click on a point to redo it</li>
+                    <li>Click on "Generate Playlist" button</li>
+                    <li>The playlist is generated according to your request, and enjoy your music!</li>
                 </div>
             </div>
             <!--modal-content-->
