--- a/web/index.html
+++ b/web/index.html
@@ -48,8 +48,12 @@
                             </div>
 
                         </fieldset>
-                        <button type="button" id="searchsubmit" class="btn btn-primary">Submit</button>
-                        <a data-toggle="modal" href="#HelpModal" class="btn btn-info">Help</a>
+                        <div class="row">
+                            <div class="col-md-3"></div>
+                        <div class="col-md-3"><button type="button" id="searchsubmit" class="btn btn-primary btn-lg btn-block">Submit</button></div>
+                        <div class="col-md-3"><a data-toggle="modal" href="#HelpModal" class="btn btn-info btn-lg btn-block">Help</a></div>
+                            <div class="col-md-3"></div>
+                    </div>
                     </form>
                 </div>
             </div>
@@ -61,7 +65,9 @@
                   <div id="graph" style="min-width: 310px; height: 400px; max-width: 700px; margin: 0 auto"></div>
                 </div>
                 <div class="row">
+                    
                   <form id='metricform' class="form-inline">
+                    <div class="col-md-6">
                       <fieldset class="form-group">
                           <label for="metricSelect">Metric: &nbsp; </label>
                           <select class="selectpicker" id="metricSelect" onchange="metricChange()">
@@ -71,8 +77,11 @@
                               <option value="danceability">Danceability</option>
                           </select>
                       </fieldset>
-                      <button type="button" style="float: right; width: 50%;" id="graphsubmit" class="btn btn-success">Generate Playlist</button>
-  								</form>
+                    </div>
+                    <div class="col-md-6">
+                      <button type="button" style="float: right; width: 50%;" id="graphsubmit" class="btn btn-success btn-lg btn-block">Generate Playlist</button>
+                    </div>
+  				 </form>
                 </div>
             </div>
             <div class="row" style="position:absolute; bottom: 10px; width: 100%;">
