--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,9 @@
             <img src="img/header3.png" class="img-responsive center">
         </div>
        </div>
-    <div class="alert alert-danger" id ="errorMsg" role="alert" style="display:none"> </div>
+    <div class="alert alert-danger" id ="errorMsg" role="alert" style="display:none">
+        <a class="close" onclick="$('.alert').hide()">X</a> 
+     </div>
         <div class="container" id ="setting-page">
             <div class="row top-buffer shadow">
                 <h2> Settings </h2>
@@ -33,10 +35,10 @@
                     <form id='searchform'>
                         <fieldset class="form-group">
                             <div class="row">
-                              <div class="col-md-2">
-                                <h4>Artist</h4>
+                              <div class="col-md-1">
+                                <h3 id="artist">Artist</h3>
                               </div>
-                              <div class="col-md-10">
+                              <div class="col-md-11">
                                 <div class="input-group input-group-lg">
                                    <span class="input-group-addon">
                                       <i class="fa fa-download"></i>
@@ -113,7 +115,7 @@
             </div>
 
           </div>
-          <div class="row" style="position:absolute; bottom: 10px; width: 100%;">
+          <div class="row" style="position:absolute; bottom: 0; width: 100%;">
             <button type="button" style="float: left;" id="back-to-graph" class="btn btn-primary"> Back </butto n>
           </div>
         </div>
