Made row margins a little smaller

--- a/web/index.html
+++ b/web/index.html
@@ -61,10 +61,10 @@
             </div>
         </div>
         <div class="container" id="graph-page">
-            <div class="row top-buffer shadow">
+            <div class="row" style="margin-top: -9px;" top-buffer shadow>
                 <h2> Graph </h2>
+                <h4 style="text-align: center">Click the graph area to add a point. Click a point to remove it.</h4>
                 <div class="row">
-                    <h4 style="text-align: center">Click the graph area to add a point. Click a point to remove it.</h4>
                     <div id="graph" style="min-width: 310px; height: 400px; max-width: 700px; margin: 0 auto">
                     </div>
                 </div>
