--- a/web/index.html
+++ b/web/index.html
@@ -86,8 +86,8 @@
   				 </form>
                 </div>
             </div>
-            <div class="row" style="position:absolute; bottom: 10px; width: 100%;">
-              <button type="button" style="float: left;" id="back-to-settings" class="btn btn-primary"> Back </butto n>
+            <div class="row">
+              <button type="button" id="back-to-settings" class="btn btn-primary button_back"> Back </button>
             </div>
         </div>
         <div class="container" id="playlist-page">
@@ -115,8 +115,8 @@
             </div>
 
           </div>
-          <div class="row" style="position:absolute; bottom: 0; width: 100%;">
-            <button type="button" style="float: left;" id="back-to-graph" class="btn btn-primary"> Back </butto n>
+          <div class="row">
+            <button type="button" id="back-to-graph" class="btn btn-primary button_back"> Back </butto n>
           </div>
         </div>
     </div>
