Made placeholder more accurate

--- a/web/index.html
+++ b/web/index.html
@@ -44,7 +44,7 @@
                                       <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                                    </span>
                                    <span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span>
-                                   <input class="form-control input-lg" id="artistSelect" name="album[query]" placeholder="Search an artist... (e.g. Kanye West)" type="text" autocomplete="off">
+                                   <input class="form-control input-lg" id="artistSelect" name="album[query]" placeholder="Search artist(s) seperated by commas... (e.g. Drake, Meek Mill)" type="text" autocomplete="off">
                                  </div>
                               </div>
                             </div>
